syntax = "proto3";

package admin;
import "google/protobuf/empty.proto";
option go_package = "collegepb";

message Mahasiswa {
  string id = 1;
  string nama = 2;
}

message Dosen {
  string id = 1;
  string nama = 2;
  string kelas = 3;
}

// Mahasiwa
message CreateMhsRequest {
  Mahasiswa mahasiswa = 1;
}

message GetMhsResponse {
   Mahasiswa mhs = 1;
}

message EdiMhsRequest {
  string id = 1;
  string nama = 2;
}

message DeleteMhsRequest {
  string id = 1;
}

// Dosen & Kelas
message GetDosenResponse {
  Dosen dosen = 1;
}


message EditDosenRequest{
  string id = 1;
  string nama = 2;
}

message EditKelasRequest{
  string id = 1;
  string kelas = 2;
}

message ResultResponse{
  string result = 1;
}

service AdminService {
  rpc CreateMhs(CreateMhsRequest) returns (ResultResponse) {}
  rpc GetAllMhs(google.protobuf.Empty) returns (stream GetMhsResponse) {}
  rpc EditMhs(EdiMhsRequest) returns (ResultResponse) {}
  rpc DeleteMhs(DeleteMhsRequest) returns (ResultResponse) {}

  rpc GetAllDosen(google.protobuf.Empty) returns (stream GetDosenResponse) {}
  rpc UpdateDosen(EditDosenRequest) returns (ResultResponse) {}
  rpc UpdateKelas(EditKelasRequest) returns (ResultResponse) {}
}